--- a/builder/modal-builder/.env.example
+++ b/builder/modal-builder/.env.example
@@ -1,5 +1,5 @@
-MODAL_TOKEN_ID=
-MODAL_TOKEN_SECRET=
+MODAL_TOKEN_ID=ak-ksxaLAnDZdr2yLRxm8r7b3
+MODAL_TOKEN_SECRET=as-URga8RZ1clcsMHIIi9CTIs
 
 # On production set to False
 DEPLOY_TEST_FLAG=True
